# gke-ui-stack

./: .gitignore  Makefile  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/backend/: main.py
infrastructure/: instructions.md
infrastructure/manifests/: backend.yaml  lb.yaml  ui.yaml  utils.yaml
infrastructure/terraform/: main.tf  outputs.tf  provider.tf  variables.tf
streamlit-ui/: .dockerignore  Dockerfile  pyproject.toml
streamlit-ui/streamlit_ui/: main.py
stremlit-ui/: pyproject.toml
