[tool.poetry]
name = "streamlit-ui"
version = "0.1.0"
description = ""
authors = ["Thusitha Chandrapala <thusithanc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.39.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
